--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,13 +12,13 @@
 @font-face {
 	font-family: 'Lato';
 	src: url(fonts/Lato-Light.ttf);
-	font-weight: lighter;
+	font-weight: 300;
 }
 
 @font-face {
 	font-family: 'Lato';
 	src: url(fonts/Lato-Hairline.ttf);
-	font-weight: thin;
+	font-weight: 300;
 }
 
 * {
@@ -52,7 +52,7 @@ col {
 }
 
 h1 {
-	font-weight: thin;
+	font-weight: 300;
 }
 
 h3 {
@@ -82,7 +82,7 @@ textarea {
 
 .heading {
 	font-size: 150%;
-	font-weight: thin;
+	font-weight: 300;
 	text-transform: uppercase;
 	text-align:center;
 	margin: auto;
@@ -96,9 +96,8 @@ textarea {
 	margin: auto;
 	text-align: center;
 	text-transform: uppercase;
-	position: sticky;
 	top: 0;
-	z-index: 9999;
+	z-index: 998;
 }
 
 .navbar ul {
@@ -114,13 +113,30 @@ textarea {
 	padding: 8px;
 }
 
+.icons {
+	position: absolute;
+	top: 0;
+	right: 0;
+	padding: 1em;
+}
+
+.social {
+	margin: auto;
+	list-style-type: none;
+}
+
+.social li {
+	width: 24px;
+	display: inline-block;
+	padding: 2px 4px;
+}
+
 .hero {
 	z-index: 0;
 }
 
 .heroimage {
 	z-index: 0;
-	position: sticky;
 	top: 0;
 	margin: auto;
 	overflow: hidden;
