--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,6 +24,7 @@
 * {
 	box-sizing: border-box;
 	font-family: 'Lato', sans-serif;
+	transition: all 1s ease;
 }
 
 a {
@@ -62,6 +63,7 @@ h1 {
 h3 {
 	text-transform: uppercase;
 	font-size: 1rem;
+	color: #48b657;
 }
 
 div {
@@ -76,6 +78,10 @@ input {
 	padding: 5px 10px;
 }
 
+picture {
+	width: 100%;
+}
+
 textarea {
 	width: 100%;
     height: 150px;
@@ -88,18 +94,33 @@ ul {
 	padding: 0;
 }
 
-.about {
-	grid-area: about;
-	margin: auto;
-	padding: 3em;
+@media screen and (min-width: 650px) {
+	.about {
+		grid-area: about;
+		margin: auto;
+		padding: 1em;
+	}
+}
+@media screen and (max-width: 650px) {
+	.about {
+		grid-area: about;
+		margin: auto;
+		padding: 1em;
+	}
 }
 
-.about-image {
-	grid-area: me-image;
+@media screen and (min-width: 650px) {
+	.about-image {
+		grid-area: me-image;
+		text-align: right;
+	}
 }
 
-.big-image {
-	width: 90 vh;
+@media screen and (max-width: 650px) {
+	.about-image {
+		grid-area: me-image;
+		text-align: center;
+	}
 }
 
 .flexbox {
@@ -114,11 +135,15 @@ ul {
 
 .gallery {
 	grid-area: gallery;
- 	display: grid;
+ 	display: flex;
+ 	flex-wrap: wrap;
+ 	justify-content: space-between;
  	grid-template-columns: 1fr 1fr 1fr 1fr;
  	grid-template-rows: 157px;
  	grid-column-gap: .5rem;
  	grid-row-gap: .5rem;
+ 	text-align: center;
+ 	align-items: center;
 }
 
 .heroimage {
@@ -130,23 +155,50 @@ ul {
 	height: 90vh;
 }
 
-.nav {
-	padding-left: 10px;
-	padding-right: 10px;
-	margin-right: 2em;
+.center-container {
+	text-align: center;
+	margin: 0 auto;
 }
 
-.recent {
-	padding: 3em;
-	text-align: center;
-	display: grid;
-	justify-content: center;
-    grid-template-columns: 20vw 20vw 20vw;
-    grid-template-rows: auto;
-    grid-template-areas:
-    "main gallery gallery";
- 	margin: 3rem auto;
-    text-align: right;
+.left-container {
+	text-align: left;
+	margin: 0 auto;
+}
+
+.nav {
+	padding-left: 2px;
+	padding-right: 2px;
+}
+
+@media screen and (min-width: 650px) {
+	.recent {
+		padding: 3em;
+		text-align: center;
+		display: grid;
+		justify-content: space-around;
+	    grid-template-columns: 1fr 1fr 1fr;
+	    grid-template-rows: auto;
+	    grid-template-areas:
+	    "main gallery gallery";
+	 	margin: 3rem auto;
+	    text-align: right;
+	}
+}
+
+@media screen and (max-width: 650px) {
+	.recent {
+		padding: 3em;
+		text-align: center;
+		display: grid;
+		justify-content: center;
+	    grid-template-columns: 95vw;
+	    grid-template-rows: auto;
+	    grid-template-areas:
+	    "main"
+	    "gallery";
+	 	margin: 3rem auto;
+	    text-align: left;
+	}
 }
 
 .recent-main {
@@ -154,26 +206,43 @@ ul {
 	margin-right: 2em;
 }
 
-.section {
-	background-color: #ffffff;
-	padding-top: 1.5em;
-	padding-bottom: 2em;
-	margin: auto;
-	display: grid;
-	justify-content: center;
-    grid-template-columns: 20vw 20vw 20vw;
-    grid-template-rows: auto;
-    grid-template-areas:
-    "me-image about about";
- 	margin: 3rem auto;
-    text-align: left;
+@media screen and (min-width: 650px) {
+	.section {
+		background-color: #ffffff;
+		padding: 1.5em;
+		margin: auto;
+		display: grid;
+		justify-content: center;
+	    grid-template-columns: 1fr 1fr 1fr;
+	    grid-template-rows: auto;
+	    grid-template-areas:
+	    "me-image about about";
+	 	margin: 3rem auto;
+	    text-align: left;
+	}
+}
+
+@media screen and (max-width: 650px) {
+	.section {
+		background-color: #ffffff;
+		padding: 1.5em;
+		margin: auto;
+		display: grid;
+		justify-content: center;
+	    grid-template-columns: 95vw;
+	    grid-template-rows: auto;
+	    grid-template-areas:
+	    "me-image"
+	    "about";
+	 	margin: 3rem auto;
+	    text-align: left;
+	}
 }
 
 .section2 {
-	background-color: #c9cddf;
+	background-color: #e0ecea;
 	padding-top: 1.5em;
 	padding-bottom: 2em;
-	box-shadow: 3px 7px 10px rgba(0,0,0,0.8);
 }
 
 .thumbnail img {
@@ -181,6 +250,7 @@ ul {
 	filter: brightness(80%);
 	-webkit-transition: all 1s ease;
     transition: all 0.5s ease;
+    margin: 0.5em;
 }
  
 .thumbnail img:hover {
@@ -214,26 +284,28 @@ ul {
 	list-style-type: none;
     margin: 0;
     padding: 0;
+	text-align: center;
 }
 
 .navbar ul li {	
 	width: 100px;
+	text-align: center;
 	display: inline-block;
-	padding: 8px;
+	padding-bottom: 0.5em;
+	padding-top: 0.5em;
 }
 
 .icons {
 	position: absolute;
 	top: 0;
 	right: 0;
-	padding: 1em;
+	padding: 0.3em;
 }
 
 .social {
 	margin: auto;
 	list-style-type: none;
 	display: flex;
-	flex: end;
 }
 
 .social li {
@@ -261,10 +333,13 @@ ul {
 	text-transform: uppercase;
 	color: white;
 	font-size: 3rem;
+	font-weight: 300;
 	position: absolute;
 	top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);    
+ 	text-shadow: 1px 2px 6px rgba(0,0,0,1);
+
 }
 
 .hero2 {
@@ -286,10 +361,8 @@ ul {
 
 .contact {
 	text-align: left;
-	width: 40vw;
 	max-width: 70vw;
 	margin: auto;
-	padding: 3em;
 }
 
 .contact2 {
@@ -329,7 +402,7 @@ ul {
 
 
 .prof {
-	width: 10vw;
+	width: 60%;
 }
 
 
